# BASIC-rs

./: Cargo.toml
atlas_core/: Cargo.toml
atlas_core/src/: main.rs  test.atlas
atlas_core/src/lexer/: mod.rs  token.rs
atlas_core/src/parser/: kind.rs  mod.rs
atlas_core/src/utils/: mod.rs
